<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.sample.ui.mvp.MVPFragment"
        android:label="@string/title_mvp"
        tools:layout="@layout/fragment_mvp" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android.sample.ui.mvvm.MVVMFragment"
        android:label="@string/title_mvvm"
        tools:layout="@layout/fragment_mvvm" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.android.sample.ui.databinding.DataBindingFragment"
        android:label="@string/title_databinding"
        tools:layout="@layout/fragment_databinding" />
</navigation>
